--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,27 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
+  <style>
+    body {
+      display: flex;
+      height: 100vh;
+    }
+    app-root {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+    .loader {
+      display: flex;
+      margin: auto;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Loading..</app-root>
 </body>
 </html>
