--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <style>
     body {
       display: flex;
-      height: 100vh;
+      min-height: 100vh;
     }
     app-root {
       display: flex;
